trying a bug-fix home page images stretching in safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,7 @@
 }
 
 .portfolio-image {
-    max-width: 80%;
+    max-width: 100%;
     padding: 10px;
 }
 
